src/App.module.css
@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Roboto&display=swap');

/*------------- Main App default styles*/

.App {
    min-height: 100vh;
    max-width: 100%;
    background-color: #F2F2F2;
    font-family: 'Roboto', sans-serif;
    padding-left: 0rem;
    padding-right: 0.5rem;
}

.Main {
    padding-top: 7rem;
    padding-bottom: 2rem;
}

* {
    box-sizing: border-box;
}

/*------------- Text styles -------------*/

.App h1, h2, h3, h4, h5, h6 {
    font-family: Caveat, sans-serif;
    color: #2C3D73;
}

.Text {
    font-weight: 500;
    font-size: 3.5rem;
    font-family: Caveat, sans-serif;
    color: #2C3D73;
}
.SmallerText {
    font-weight: 500;
    font-size: 2.5rem;
}

.SpanText {
    font-family: Caveat, sans-serif;
    color: #2C3D73;
    font-size: 1.5rem;
    text-align: center;
}

.OrangeText {
    color: #F24405;
}
.OrangeText:hover{
    color: #F58A07;;
}

/*------------- hr, a and i styles -------------*/

hr {
    border: 2px solid #F24405;
    width: 3rem;
}

i {
    color: #2C3D73;
    margin-right: 0.3rem;
    font-size: 1.5rem;
    vertical-align: middle;
}

i:hover {
    cursor: pointer;
    color: #F24405;
    transition: color ease-in-out 0.2s;
}

a {
    color: #2C3D73;
}

a:hover, a:hover i {
    text-decoration: none;
    color: #F24405;
    transition: color ease-in-out 0.2s;
}

/*------------- Image and figure styles -------------*/

.Image {
    max-height: 60vh;
    max-width: 100%;
    object-fit: cover;
}

.FillerImage {
    width: 100%;
    object-fit: contain;
}

figure {
    text-align: center;
    max-width: 100%;
    display: inline-block;
}

.UploadImg >  {
    object-fit: cover;
}

/*------------- Media styles -------------*/

@media only screen and (max-width: 526px) and (min-width: 370px) {
    .Main {
        padding-top: 150px;
    }
}
@media only screen and (max-width: 508px){
    .App {
        padding-left: 0.5rem;
        padding-bottom: 3.5rem;
    }
}

